# oggy

./: .gitlab-ci.yml  .travis.yml  CMakeLists.txt  README.md
examples/: CMakeLists.txt
examples/text-editor/: main.cpp
include/oggy/: Canvas.hpp  ColumnLayout.hpp  Document.hpp  Font.hpp  Heading.hpp  Log.hpp  Node.hpp  Resource.hpp  ResourceManager.hpp  RowLayout.hpp  TextBox.hpp  Window.hpp
magui/: CMakeLists.txt
magui/Components/: Button.hpp  ColumnLayout.cpp  ColumnLayout.hpp  RowLayout.cpp  RowLayout.hpp  TextBox.cpp  TextBox.hpp  Title.cpp  Title.hpp
magui/Core/: Application.cpp  Application.hpp  Canvas.cpp  Canvas.hpp  Color.cpp  Color.hpp  Document.cpp  Document.hpp  Event.cpp  Event.hpp  Node.cpp  Node.hpp  VerticalLayout.cpp  VerticalLayout.hpp  Window.cpp  Window.hpp
oggy/: CMakeLists.txt
oggy/Components/: Button.cpp  Button.hpp  ColumnLayout.cpp  ColumnLayout.hpp  Heading.cpp  Heading.hpp  RowLayout.cpp  RowLayout.hpp
oggy/Core/: Application.cpp  Application.hpp  Canvas.cpp  Canvas.hpp  Color.cpp  Color.hpp  Document.cpp  Document.hpp  Event.cpp  Event.hpp  Font.cpp  Font.hpp  Node.cpp  Node.hpp  ResourceManager.hpp  Window.cpp
samples/: CMakeLists.txt
samples/text-editor/: main.cpp
src/: Application.cpp  Button.cpp  CMakeLists.txt  Canvas.cpp  Color.cpp  ColumnLayout.cpp  Document.cpp  Event.cpp  Font.cpp  Heading.cpp  Log.cpp  Node.cpp  RowLayout.cpp  TextBox.cpp  Window.cpp
tests/: CMakeLists.txt  test_thing.cpp
